--- a/src/index.css
+++ b/src/index.css
@@ -7,25 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.body {
+	background-color: #000;
+
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-ul {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 10px;
-}
-
-li {
-	border: 3px solid rgb(39, 38, 38);
-	padding: 30px;
-	justify-content:center;
-	border-radius: 10px;
-	background-color: rgba(53, 48, 48, 0.295);
-}
-
-li:hover {
-	background-color: rgba(139, 112, 112, 0.295);
-}
