--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,14 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* justify-content: center; */
 	font-size: calc(10px + 2vmin);
 	color: white;
 }
 
 h1 {
 	color: red;
-	background-color: #1b1b1b;
+	/* background-color: #1b1b1b; */
+	background-color: black;
 	text-align: center;
 	padding: 20px;
 }
