--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1b1b1b;
+
 }
 
 .body {
-	/* background-color: #000; */
 	background-color: #1b1b1b;
 }
 
